--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </tr>
             <tr>
                 <td>
-                    소스코드 보기
+                    <a href="https://github.com/ligerolibre/classicwebsite">소스코드 보기</a>
                 </td>
             </tr>
         </tbody>
